# kontest-svn

trunk/: AUTHORS  CMakeLists.txt  README  messages.sh
trunk/po/: CMakeLists.txt
trunk/src/: CMakeLists.txt  TODO.txt  contest.cpp  contest.h  contestcqwwdxssb.cpp  contestcqwwdxssb.h  database.cpp  database.h  dxclusterspotitem.cpp  dxclusterspotitem.h  dxclusterwindow.cpp  dxclusterwindow.h  filemanager.cpp  filemanager.h  kontest.desktop  kontest.pro  logbook.cpp  logbook.h  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  partialswindow.cpp  partialswindow.h  qso.cpp  setupdialog.cpp  setupdialog.h  setuppages.cpp  setuppages.h  uidx.ui  userdatapage.cpp  userdatapage.h  world.cpp  world.h
